Notebook - PostgreSQL to DynamoDB (#171)
* Notebook - PostgreSQL to DynamoDB

* Table

* Clone and compile

* Service starts

* Implementing daos pt I

* Implementing daos pt II

* Eureka!

* Migration

* Content key UUID

* Fix

* Fix

* Rework ColumnData saving

* Fix migration

* Fix deletion

* TODO elimination Pt I.

* TODO elimination Pt II.