@@ -31,12 +31,11 @@ public class CustomTableDateTimeTest extends BackEndTest {
         String accessToken = IndexPageActions.registerAndLogin(getServerPort(), userData);
 
         create_nullDateTime(accessToken);
-        create_failedToParse(accessToken);
         create(accessToken);
 
         UUID listItemId = CategoryActions.getChildrenOfCategory(getServerPort(), accessToken, null)
             .getChildren()
-            .get(0)
+            .getFirst()
             .getId();
         TableResponse tableResponse = TableActions.getTable(getServerPort(), accessToken, listItemId);
 
@@ -46,10 +45,10 @@ public class CustomTableDateTimeTest extends BackEndTest {
     private void edit(String accessToken, UUID listItemId, TableResponse tableResponse) {
         EditTableRequest editTableRequest = CustomTableUtils.createEditCustomTableRequest(
             NEW_TITLE,
-            tableResponse.getTableHeads().get(0).getTableHeadId(),
+            tableResponse.getTableHeads().getFirst().getTableHeadId(),
             NEW_COLUMN_TITLE,
-            tableResponse.getRows().get(0).getRowId(),
-            tableResponse.getRows().get(0).getColumns().get(0).getColumnId(),
+            tableResponse.getRows().getFirst().getRowId(),
+            tableResponse.getRows().getFirst().getColumns().getFirst().getColumnId(),
             ColumnType.DATE_TIME,
             ""
         );
@@ -59,8 +58,8 @@ public class CustomTableDateTimeTest extends BackEndTest {
         tableResponse = TableActions.getTable(getServerPort(), accessToken, listItemId);
 
         assertThat(tableResponse.getTitle()).isEqualTo(NEW_TITLE);
-        assertThat(tableResponse.getTableHeads().get(0).getContent()).isEqualTo(NEW_COLUMN_TITLE);
-        assertThat(tableResponse.getRows().get(0).getColumns().get(0).getData()).isEqualTo("");
+        assertThat(tableResponse.getTableHeads().getFirst().getContent()).isEqualTo(NEW_COLUMN_TITLE);
+        assertThat(tableResponse.getRows().getFirst().getColumns().getFirst().getData()).isEqualTo("");
     }
 
     private void create(String accessToken) {
@@ -69,19 +68,11 @@ public class CustomTableDateTimeTest extends BackEndTest {
         TableActions.createTable(getServerPort(), accessToken, request);
     }
 
-    private void create_failedToParse(String accessToken) {
-        CreateTableRequest request = CustomTableUtils.createCustomTableRequest(TITLE, COLUMN_TITLE, ColumnType.DATE_TIME, "asd");
-
-        Response response = TableActions.getCreateTableResponse(getServerPort(), accessToken, request);
-
-        ResponseValidator.verifyInvalidParam(response, "dateTime", "failed to parse");
-    }
-
     private void create_nullDateTime(String accessToken) {
         CreateTableRequest request = CustomTableUtils.createCustomTableRequest(TITLE, COLUMN_TITLE, ColumnType.DATE_TIME, null);
 
         Response response = TableActions.getCreateTableResponse(getServerPort(), accessToken, request);
 
-        ResponseValidator.verifyInvalidParam(response, "dateTime", "must not be null");
+        ResponseValidator.verifyInvalidParam(response, "data", "must not be null");
     }
 }
